# prov

./: Cargo.toml  README.md
.github/workflows/: homebrew.yml  publish.yml
colophon/: Cargo.toml
colophon-cli/: Cargo.toml
colophon-cli/src/: main.rs
colophon/src/: attach.rs  change.rs  config.rs  content.rs  document.rs  error.rs  fs.rs  index.rs  intake.rs  lib.rs  link.rs  meta.rs  mutate.rs  relation.rs  route.rs  title.rs  tree.rs  validate.rs  workspace.rs
docs/: DESIGN.md  config-vocab.md  getting-started.md  init-adoption.md  next-steps.md  reference-styles.md  spec.md
prov-cli/: Cargo.toml
prov-cli/src/: cli.rs  main.rs
prov-cli/tests/: config_home.rs
prov/src/: edit.rs  link.rs  mutate.rs  validate.rs
