[package]
name = "colophon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "A self-describing plaintext workspace: structure lives in documents' own embedded metadata."
keywords = ["markdown", "frontmatter", "workspace", "knowledge-base"]
categories = ["text-processing", "filesystem"]
# Not published yet — stabilizing the public API first.
publish = false

[dependencies]
# Embedded-metadata backend. fig is a Zig-backed parser/editor (its build.rs
# runs `zig build`). The value tree is colophon's common currency. Which format
# backends fig compiles in is governed by colophon's features below.
fig.workspace = true
indexmap.workspace = true
thiserror.workspace = true

# Body-prose parsing, behind `content` — see `src/content.rs`. Zig-backed
# (its build.rs runs `zig build`, same shape as `fig`).
twig = { workspace = true, optional = true }

[features]
# YAML is the conventional default (`---` frontmatter, `registry.yaml`). Turn it
# off with `default-features = false` and select another format to slim the build.
default = ["yaml"]

# Each feature forwards to the matching `fig` parser/printer backend. With a
# format off, its Zig parser is left out of `libfig.a` *and* colophon stops
# recognizing that format (see `whole_file_format`). At least one must be on —
# `lib.rs` enforces this with a `compile_error!`.
yaml = ["fig/yaml"]
json = ["fig/json"]
# `fig` is the dependency name, so the native-dialect feature is spelled
# `fig-lang` (a feature and a dependency may not share a name unambiguously).
fig-lang = ["fig/fig"]

# Body parsing (Djot/Markdown), via `twig` — see `src/content.rs`. Real FFI:
# parse + render to HTML + code-span detection (so a `[[…]]` inside a code
# span is never mistaken for a wikilink — DESIGN §8). Needs the Zig toolchain
# to build `twig`.
content = ["dep:twig"]
